# AI_Agent_Driven_Campus_Governance_Platform

./: .gitignore  README.md  dictionary.docx  plan and tool added.docx  ui_design.docx  设计文档.docx
agent_server/: .env.example  alembic.ini  requirements.txt  run.py
agent_server/app/: app_container.py  lifecycle.py  main.py
agent_server/app/agent/: context_builder.py  executor.py  memory.py  plan_schema.py  planner.py  prompt_manager.py  reasoning.py  response_composer.py  response_formatter.py  router.py  router_old_version.py  session_manager.py
agent_server/app/api/: deps.py
agent_server/app/api/routers/: __init__.py  admin.py  audit.py  auth.py  (+5 more)
agent_server/app/config/: constants.py  settings.py
agent_server/app/llm/: base.py  embeddings_provider.py  local_embeddings_provider.py  local_provider.py  openai_embeddings_provider.py  openai_provider.py  output_parser.py
agent_server/app/optimizer/: course_plan_optimizer.py
agent_server/app/rag/: chunker.py  document_loader.py  knowledge_indexer.py  policy_handbook_hybrid_retriever.py  rag_service.py  retriever.py  vector_store.py
agent_server/app/security/: jwt_handler.py
agent_server/app/services/: agent_memory_service.py  agent_session_service.py  audit_service.py  auth_service.py  campus_card_service.py  course_enrollment_service.py  course_plan_service.py  leave_service.py  notification_service.py  schedule_service.py  tool_execution_log_service.py  user_service.py
agent_server/app/tests/: test_chat_api.py
agent_server/app/tools/: base.py  campus_card_tools.py  course_plan_tools.py  leave_tools.py  notification_tools.py  rag_tools.py  registry.py  schedule_tools.py
agent_server/app/workflows/: base.py  course_plan_workflow.py  leave_workflow.py  recharge_workflow.py
agent_server/database/migrations/: env.py
agent_server/database/seeds/: convert_handbook_sqlite_to_jsonl.py  debug_course_plan.py  seed_campus_card.py  seed_demo_course_plan_data.py  seed_permissions.py  seed_policy_handbook.py  seed_roles.py  seed_schedule_test.py  seed_user_test.py
agent_server/db/: base.py  session.py
agent_server/db/models/: __init__.py  agent_session.py  audit_log.py  pending_action.py  permission.py  profile.py  role.py  schedule.py  tool_execution_log.py  user.py
agent_server/docs/knowledge/: campus_card_policy.txt  dormitory_rules.txt  leave_policy.txt  policy_handbook_nodes.jsonl
qt_client/: CMakeLists.txt  config.json  login_presenter.h  main.cpp
qt_client/app/: app_context.cpp  app_context.h  application.cpp  application.h
qt_client/core/auth/: token_manager.cpp  token_manager.h
qt_client/core/config/: config_manager.cpp  config_manager.h
qt_client/core/logger/: logger.cpp  logger.h
qt_client/core/network/: http_client.cpp  http_client.h  sse_client.cpp  sse_client.h
qt_client/core/utils/: json_utils.cpp  json_utils.h
qt_client/presenters/: chat_presenter.cpp  chat_presenter.h  login_presenter.cpp  login_presenter.h
qt_client/services/: agent_service.cpp  agent_service.h  auth_service.cpp  auth_service.h
qt_client/ui/pages/: chat_page.cpp  chat_page.h
qt_client/ui/widgets/: chat_bubble_widget.cpp  chat_bubble_widget.h  chat_bubble_widget.ui
qt_client/ui/windows/: login_window.cpp  login_window.h  login_window.ui  main_window.cpp  main_window.h
(+48 files in other folders)
